# xfeed

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt  run.py  run.sh
.sdd/: config.json
.sdd/changes/tester-feature/: proposal.md  spec.md
.sdd/changes/xfeed-core/: archive.md  design.md  proposal.md  spec.md  tasks.md
src/: article_reader.py  auth.py  config.py  enrich.py  filter.py  obsidian_writer.py  scraper.py  state.py  tester.py
tests/: conftest.py  test_config.py  test_enrich.py  test_filter.py  test_obsidian_writer.py  test_state.py
