[project]
name = "xfeed"
version = "0.1.0"
description = "X/Twitter Feed → Obsidian Pipeline — auto-scrape timeline, bookmarks, likes, filter tech content, enrich with Firecrawl"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.60",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
